# pybela-pytorch-xc-tutorial

./: .gitignore  .gitmodules  Dockerfile  Pipfile  demo.ipynb  readme-m.md  readme-silicon.md  readme.md  requirements.txt  setup.sh  tutorial-m.ipynb  tutorial-silicon.ipynb  tutorial.ipynb  useful-commands.txt
bela-code/dataset-capture/: render.cpp  sketch.js
bela-code/inference/: CMakeLists.txt  build.sh  readme.md
bela-code/inference/src/: CMakeLists.txt  render.cpp
bela-code/pot-inference/: .gitignore  CMakeLists.txt  build.sh  readme.md
bela-code/pot-inference/src/: CMakeLists.txt  main.cpp  render.cpp
docker-scripts/: download_libtorch.sh
pyBela/: Streamer.py  Watcher.py
tutorial/: build_project.sh  requirements.txt  setup-bela.sh  tutorial.ipynb
tutorial/_fritzing/: potentiometer.fzz  potentiometer_2.fzz
tutorial/bela-code/dataset-capture/: render.cpp
tutorial/bela-code/inference/: CMakeLists.txt  Watcher.cpp  render.cpp
tutorial/bela-code/pot-inference/: CMakeLists.txt  Watcher.h  build.sh  main.cpp  render.cpp
tutorial/bela-code/pybela-basic/: CMakeLists.txt  render.cpp
tutorial/scripts/: setup-bela-revC.sh
